# vero-core-contracts

./: .gitignore  Cargo.toml  Description.md  README.md  VERIFICATION_REPORT.md  pull_request.md
src/: circuit_breaker.rs  consensus.rs  drips.rs  events.rs  gas.rs  guardian.rs  lib.rs  reentrancy.rs  reputation.rs  task.rs  types.rs  vault.rs
test_snapshots/: debug_circuit_breaker_count.1.json  test_add_guardian_and_register_task.1.json  test_admin_can_reset_circuit_breaker.1.json  test_calculate_voting_power_none_for_unset.1.json  test_calculate_voting_power_returns_score.1.json  test_circuit_breaker_trips_after_threshold.1.json  test_custom_weight_threshold.1.json  test_lock_released_after_failed_vote.1.json  test_lock_released_after_successful_register_task.1.json  test_lock_released_after_successful_vote.1.json  test_many_low_rep_guardians_cannot_resolve_without_enough_weight.1.json  test_multiple_low_rep_guardians_accumulate_weight.1.json  test_non_guardian_vote_rejected.1.json  test_paused_contract_rejects_register_task.1.json  test_paused_contract_rejects_vote.1.json  test_reputation_can_be_updated.1.json  test_reward_stream_duplicate_rejected.1.json  test_reward_stream_rejected_for_nonexistent_task.1.json  test_reward_stream_rejected_for_unverified_task.1.json  test_reward_stream_stored_after_success.1.json  test_set_and_get_reputation.1.json  test_single_high_rep_guardian_resolves_task.1.json  test_task_resolution_reverts_if_vault_unavailable.1.json  test_task_resolution_triggers_payout.1.json  test_task_resolved_includes_final_weight.1.json  test_vote_on_nonexistent_task_rejected.1.json  (+2 more)
tests/: init.rs  (+1 more)
verification/: Cargo.toml
verification/src/: lib.rs
