[package]
name = "vero-verification"
version = "0.1.0"
edition = "2021"

# This crate is ONLY for formal verification harnesses.
# It is never compiled into the WASM artifact.
#
# Run proofs with:
#   cargo install --locked kani-verifier && cargo kani setup
#   cargo kani --manifest-path verification/Cargo.toml

[dependencies]
# Pull in the pure consensus logic from the main crate.
# The `verification` feature exposes `pub mod consensus` without
# requiring the Soroban host environment.
vero-core-contracts = { path = "..", features = ["verification"] }

# NOTE: `kani` is NOT listed as a dependency here.
# Kani injects its own stubs at verification time via `cargo kani`.
# Adding it as a normal dep would fail because `kani` (the crate) is
# only available inside Kani's custom toolchain, not on crates.io.
# The harnesses use `#[cfg(kani)]` to be invisible to normal builds.
